# rustfullstackworkshop

./: .gitignore  Cargo.toml  Shuttle.toml  api.http
api/lib/: Cargo.toml
api/lib/src/: films.rs  health.rs  lib.rs
api/lib/src/film_repository/: mod.rs  postgres_film_repository.rs
api/lib/tests/: health.rs
api/shuttle/: Cargo.toml
api/shuttle/src/: main.rs
shared/: Cargo.toml
shared/src/: models.rs
