[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1.3.4", features = ["serde", "v4", "js"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
#database
sqlx = { version = "0.8.6", default-features = false, features = [
    "tls-native-tls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "json",
], optional = true }
#this is for the backend, because sqlx does not support wasm
[features]
backend = ["sqlx"]