[package]
name = "api-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
# actix
actix-web = "4.9.0"
actix-rt = "2.7.0"
# database
sqlx = { version = "0.8.6", default-features = false, features = [
    "tls-native-tls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }
# tracing
tracing = "0.1"
reqwest = { version = "0.12.15", features = ["json"] }
#shared with backend feature
shared = {path = "../../shared", features = ["backend"]}
#utils
async-trait = "0.1.2"
#uuid
uuid = { version = "1.3.4", features = ["serde", "v4", "js"] }