[package]
name = "api-shuttle"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
shuttle-actix-web = "0.54.0"
shuttle-runtime = "0.54.0"
tokio = "1.45.0"
# database
shuttle-shared-db = { version = "0.54.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.8.5", default-features = false, features = [
    "tls-native-tls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }
tracing = "0.1"
api-lib = { path = "../lib" }
#static files
actix-files = "0.6.6"